# mypropath

./: .cursorignore  .dockerignore  .env  .gitignore  LICENSE  README.md  docker-compose.offline.yaml  docker-compose.yaml  main.py  pyproject.toml  test_sse.html  test_sse.py
.cursor/rules/: architecture.mdc
docker/: Dockerfile
docker/mysql/: mysql.cnf
docker/reids/: redis.conf
docs/: pytest子进程状态响应机制.md  代码编写规范.md  测试任务管理方案.md  测试框架.md  静态代码检查.md
framework/: frame_logger.py
framework/abs/: abs_db_manager.py
framework/api/: container.py
framework/api/common/: README.md
framework/api/common/fw_exceptions/: __init__.py  fw_exceptions.py
framework/api/common/fw_httpclient/: __init__.py  client_abc.py  fw_httpclient.py  fw_httpclient_models.py
framework/api/common/model/: __init__.py  base_data_model.py
framework/common/: db_manager.py
framework/config/: __init__.py  api_config.py  db_config.py  fw_base_settings.py  fw_config.py
framework/config/config_files/: api_config.toml  db_config.toml
framework/containers/: app_container.py
framework/pytest_plugin/: README.md  __init__.py  task_plugin.py
framework/task/: __init__.py  state_store.py  traceid.py
framework/ui/: __init__.py
framework/ui/common/: __init__.py  base_page.py  browser_manager.py  ui_exceptions.py
framework/ui/components/: __init__.py
framework/ui/pages/: __init__.py  login_page.py
framework/utils/: db.py  file_op.py  setup_logger.py  thread_pool.py
scripts/: README_OFFLINE.md  deploy_offline.ps1  deploy_offline.sh  export_images.ps1  export_images.sh  import_images.ps1  import_images.sh  离线快速部署方案.md
src/utils/: sse.listener.spec.ts  sseUtil.ts  sseUtilsEnhancer.ts
tests/: conftest.py  pytest.ini
tests/fixtures/: __init__.py  sse_capture.js  sse_fixtures.py  ui_fixtures.py
tests/testsse/: test_sse_demo.py
tests/ui/: test_login_example.py
