[project]
name = "pyt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.48.2",
    "dotenv>=0.9.9",
    "fastapi>=0.124.2",
    "httpx>=0.28.1",
    "playwright>=1.56.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.15.1",
    "pytest-playwright>=0.7.2",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

# uv 配置 - 包索引镜像源
[tool.uv]
# 指定主镜像源 (例如: 清华大学镜像)
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# 或者使用阿里云镜像
# index-url = "https://mirrors.aliyun.com/pypi/simple"
# 或者使用中科大镜像
# index-url = "https://pypi.mirrors.ustc.edu.cn/simple"
# 默认使用官方 PyPI
# index-url = "https://pypi.org/simple"

# 额外的索引源 (可选)
# extra-index-url = [
#     "https://pypi.tuna.tsinghua.edu.cn/simple",
# ]

# Ruff 配置 - 快速且现代的 Python linter 和 formatter
[tool.ruff]
# 目标 Python 版本
target-version = "py312"
# 行长度限制
line-length = 88
# 排除的目录
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "node_modules",
    "build",
    "dist",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",   # pycodestyle 错误
    "W",   # pycodestyle 警告
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
# 忽略的规则
ignore = [
    "E501",  # 行长度（由 formatter 处理）
]

[tool.ruff.format]
# 使用双引号
quote-style = "double"
# 缩进样式
indent-style = "space"
# 行尾风格（"auto" 自动检测，"lf" Unix 风格，"crlf" Windows 风格）
line-ending = "auto"
